[gd_scene load_steps=33 format=2]

[ext_resource path="res://resources/player/player16x16.png" type="Texture" id=1]
[ext_resource path="res://src/actors/player/player.gd" type="Script" id=2]
[ext_resource path="res://src/actors/player/IDLE.gd" type="Script" id=3]
[ext_resource path="res://src/actors/player/MOVE.gd" type="Script" id=4]
[ext_resource path="res://src/actors/player/JUMP.gd" type="Script" id=5]
[ext_resource path="res://src/actors/player/FALL.gd" type="Script" id=6]

[sub_resource type="RayShape2D" id=32]
length = 8.0

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 6, 4 )

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "DEAD"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "FALL"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "IDLE"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "JUMP"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "MOVE"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachine" id=20]
states/DEAD/node = SubResource( 2 )
states/DEAD/position = Vector2( 183.499, 215.049 )
states/FALL/node = SubResource( 3 )
states/FALL/position = Vector2( 524.926, 342.309 )
states/IDLE/node = SubResource( 4 )
states/IDLE/position = Vector2( 356.333, 149.667 )
states/JUMP/node = SubResource( 5 )
states/JUMP/position = Vector2( 183.708, 342.259 )
states/MOVE/node = SubResource( 6 )
states/MOVE/position = Vector2( 525.418, 215.989 )
transitions = [ "IDLE", "MOVE", SubResource( 8 ), "MOVE", "JUMP", SubResource( 11 ), "JUMP", "FALL", SubResource( 13 ), "IDLE", "DEAD", SubResource( 16 ), "MOVE", "DEAD", SubResource( 17 ), "JUMP", "DEAD", SubResource( 18 ), "FALL", "DEAD", SubResource( 19 ), "MOVE", "IDLE", SubResource( 28 ), "MOVE", "FALL", SubResource( 29 ), "FALL", "IDLE", SubResource( 30 ), "IDLE", "JUMP", SubResource( 31 ) ]
start_node = "IDLE"
end_node = "DEAD"
graph_offset = Vector2( -195, 78 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[sub_resource type="Animation" id=22]
resource_name = "DEAD"

[sub_resource type="Animation" id=23]
resource_name = "FALL"

[sub_resource type="Animation" id=24]
resource_name = "IDLE"

[sub_resource type="Animation" id=25]
resource_name = "JUMP"
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath("JumpTimer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=26]
resource_name = "MOVE"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "SLIDE"

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.498243 )
texture = ExtResource( 1 )

[node name="GroundCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 32 )

[node name="WorldCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 33 )

[node name="StateMachine" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 21 )

[node name="IDLE" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="MOVE" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="JUMP" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="FALL" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DEAD = SubResource( 22 )
anims/FALL = SubResource( 23 )
anims/IDLE = SubResource( 24 )
anims/JUMP = SubResource( 25 )
anims/MOVE = SubResource( 26 )
anims/SLIDE = SubResource( 27 )

[node name="StateDebug" type="Label" parent="."]
margin_left = -20.0
margin_top = -46.0
margin_right = 20.0
margin_bottom = -32.0

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="JumpTimer" to="StateMachine/JUMP" method="_on_JumpTimer_timeout"]
